# AIE7_dev

01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
06_Multi_Agent_with_LangGraph/content/data/9d8f0c4d/: customer_assistance_student_loans_low_income_students.txt
06_Multi_Agent_with_LangGraph/content/data/bc520f42/: Student_Loans_Assistance_Low_Income_Students.txt
06_Multi_Agent_with_LangGraph/content/data/cdeb8b59/: Student_Loans_Low_Income_Students_Response.txt
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: open-deep-research.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
14_LangGraph_Platform/: README.md
